--- a/product/templates/product/cart.html
+++ b/product/templates/product/cart.html
@@ -67,7 +67,7 @@ Cart
                 <div id="cart-total" class="col-sm-6 i_price">₹ 56000</div>
             </div>
             <div class="text-center">
-                <button class="mt-5 mb-5 p_order">Place Order</button>
+                <a href="{% url 'order_start' %}" class="btn mt-5 mb-5 p_order">Place Order</a>
             </div>
     </div>
 </div>
