--- a/orders/templates/payment/order_address.html
+++ b/orders/templates/payment/order_address.html
@@ -23,13 +23,64 @@
         <img class="edit" src="/assets/img/edit.svg" alt="">
         <div class="main">2. DELIVERY  ADDRESS </div>
         <div class="details pb-5">
-            <div><span class="ans ms-3">Pooja Gaikwad</span><span class="ms-3">Kundra Housing Society  Baner,Pune,Maharashtra Pune-411003 9875325457</span></div>
+            <div class="row">
+                <div class="col-auto">
+                    <label for="inputAddress" class="form-label fs-4">Address</label>
+                </div>
+                <div class="col-auto">
+                    <form action="{% url 'order_order_details' %}" id="addr-form" method="POST">
+                        {% csrf_token %}
+                        <select id="inputAddress" name="addrId" class="form-select">
+                            {% for address in addresses %}
+                            <option
+                            value = {{address.id}}
+                            data-id = {{address.id}}
+                            >
+                            {{address.get_long_description}}
+                        </option>
+                        {% endfor %}
+                    </select>
+                </form>
+                </div>
+            </div>
+            <div class="">
+                {% for address in addresses %}
+                    <div class="addr_all" id="addr_{{address.id}}" style="display: none;">
+                        <div class="row">
+                            <div class="col-12">
+                                <label for="inputFname" class="form-label">Full Name</label>
+                                <input disabled type="text" class="form-control" value="{{address.fname}}" id="inputFname" placeholder="Apartment, studio, or floor">
+                            </div>
+                            <div class="col-12">
+                                <label for="inputAddress" class="form-label">Address</label>
+                                <input disabled type="text" class="form-control" value="{{address.address}}" id="inputAddress" placeholder="1234 Main St">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-auto">
+                                <label for="inputCity" class="form-label">City</label>
+                                <input disabled type="text" class="form-control" value="{{address.city}}" id="inputCity">
+                            </div>
+                            <div class="col-auto">
+                                <label for="inputZip" class="form-label">Postal Code</label>
+                                <input disabled type="text" class="form-control" value="{{address.postal_code}}" id="inputZip">
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
         </div>
         <div class="details pb-5">
             <div class="signIn mt-1">
                 <a class="link-danger" href="{% url 'order_add_address' %}" >add address </a>
-            </div> 
-            <a href="{% url 'order_order_details' %}" class="btn continue mt-2">Delivery to this Address</a>
+            </div>             
+            <button 
+                type="submit"
+                form="addr-form"
+                class="btn continue mt-2"
+            >
+                Delivery to this Address
+            </button> 
         </div>
     </div>
     <div class="container mt-5">
@@ -42,3 +93,22 @@
         <div class="main">4. PAYMENT DETAILS </div>
     </div>
 {% endblock %}
+{% block js %}
+<script>
+    let selectAddr = document.getElementById('inputAddress')
+    let adrElms = document.getElementsByClassName('addr_all')
+    selectAddr.addEventListener('change', (e)=>{
+        // console.log(e);
+        for(let i=0; i<adrElms.length; i++){
+            adrElms[i].style["display"] = "none";
+            // console.log(adrElms[i])
+        }
+        let id = e.target.value;
+        // console.log(id)
+        if(id){
+            let targetElm = document.getElementById('addr_'+id)
+            targetElm.style["display"] = "block";
+        }
+    } )
+</script>
+{% endblock js %}
