--- a/user_manager/templates/user_manager/signup.html
+++ b/user_manager/templates/user_manager/signup.html
@@ -16,7 +16,7 @@ Sign-up
             {% endfor %}
         </ul>
     {% endif %}
-    <form method='post' enctype="multipart/form-data">
+    <form method='post'>
         {% csrf_token %}
         <h1>Sign in</h1>
         <p>Already a user? <a href="{% url 'login' %}">Log-in here</a></p>
@@ -47,10 +47,6 @@ Sign-up
         <div class='form-group'>
             <label for="date_of_birth">Date of Birth</label>
             <input type="date" class='entry' name="date_of_birth" id="date_of_birth" class="form-control" placeholder="Date of Birth">
-        </div>
-        <div class='form-group'>
-            <label for="date_of_birth">Profile Pic</label>
-            <input type="file" class='entry' accept="profile_pic/" name="profile_pic" id="profile_pic" class="form-control" >
         </div>
         <button type="submit" class="continue">Continue</button>
     </form>
