--- a/orders/templates/payment/order_address.html
+++ b/orders/templates/payment/order_address.html
@@ -28,7 +28,7 @@
                     <label for="inputAddress" class="form-label fs-4">Address</label>
                 </div>
                 <div class="col-auto">
-                    <form action="{% url 'order_order_details' %}" id="addr-form" method="POST">
+                    <form action="{% url 'order_verify_details' %}" id="addr-form" method="POST">
                         {% csrf_token %}
                         <select id="inputAddress" name="addrId" class="form-select">
                             {% for address in addresses %}
@@ -45,7 +45,7 @@
             </div>
             <div class="">
                 {% for address in addresses %}
-                    <div class="addr_all" id="addr_{{address.id}}" style="display: none;">
+                    <div class="addr_all" id="addr_{{address.id}}" style={% if forloop.first %}""{% else %}"display: none;"{% endif %} >
                         <div class="row">
                             <div class="col-12">
                                 <label for="inputFname" class="form-label">Full Name</label>
