--- a/orders/templates/payment/order_order_details.html
+++ b/orders/templates/payment/order_order_details.html
@@ -65,10 +65,10 @@
                     </div>
                 </div>
             {% endfor %}
-            <form id="order-form" action="{% url 'order_create' %}" method="POST">
+            <form action="{% url 'order_create' %}" method="POST">
                 {% csrf_token %}
                 <input type="hidden" name="addrId" value={{address.id}}>
-                <button type="submit" data-addrId={{address.id}} id="order-btn" class="continue mt-2">Continue</button>
+                <button type="submit" class="continue mt-2">Continue</button>
             </form>
         </div>
     </div>
@@ -76,8 +76,3 @@
         <div class="main">4. PAYMENT DETAILS </div>
     </div>
 {% endblock body%}
-{% block js %}
-<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-<script> let createOrderUrl = "{% url 'order_create' %}"  </script>
-<script src="{% static 'payment/js/razorpay.js' %}"></script>
-{% endblock js %}
