--- a/pages_static/templates/base.html
+++ b/pages_static/templates/base.html
@@ -32,7 +32,7 @@
             <div id='nav-right'>
                 <a class="nav-item" href="#">Categories</a>
                 <a class="nav-item" href="{% url 'blogs' %}">Blogs</a>
-                <a class="nav-item" href="#">Contact Us</a>
+                <a class="nav-item" href="{% url 'contact' %}">Contact Us</a>
             </div>
         </nav>
     </header>
@@ -97,7 +97,7 @@
                             </div>
                             <div class="row align-center footer-about">
                                 <a class='col' href="{% url 'blogs' %}">Blog Post</a>
-                                <a class='col' href="">Contact Us</a>
+                                <a class='col' href="{% url 'contact' %}">Contact Us</a>
                             </div>
                         </div>
                     </div>
