--- a/pages_static/templates/pages_static/index.html
+++ b/pages_static/templates/pages_static/index.html
@@ -16,21 +16,21 @@
             <img src="{%static 'pages_static/images/index/Rectangle 52.png' %}" alt="" />
             <div class="overlay-text text-white ms-5" style="top: 50%">
               <h1 class="mb-3">Exclusive Banarasi Silk Saree</h1>
-              <button class="btn styled-btn-outline">Shop Now</button>
+              <a class="btn styled-btn-outline" href="{% url 'product_list' %}">Shop Now</a>
             </div>
           </div>
           <div class="item overlay-container" style="width:auto">
             <img src="{%static 'pages_static/images/index/Rectangle 52.png' %}" alt="" />
             <div class="overlay-text text-white ms-5" style="top: 50%">
               <h1 class="mb-3">02 Exclusive Banarasi Silk Saree</h1>
-              <button class="btn styled-btn-outline">Shop Now</button>
+              <a class="btn styled-btn-outline" href="{% url 'product_list' %}">Shop Now</a>
             </div>
           </div>
           <div class="item overlay-container" style="width:auto">
             <img src="{%static 'pages_static/images/index/Rectangle 52.png' %}" alt="" />
             <div class="overlay-text text-white ms-5" style="top: 50%">
               <h1 class="mb-3">03 Exclusive Banarasi Silk Saree</h1>
-              <button class="btn styled-btn-outline">Shop Now</button>
+              <a class="btn styled-btn-outline" href="{% url 'product_list' %}">Shop Now</a>
             </div>
           </div>
         </div>
