--- a/pages_static/templates/pages_static/index.html
+++ b/pages_static/templates/pages_static/index.html
@@ -154,7 +154,7 @@
               />
               <h2 class="mt-5 text-sp-red">Banarasi Silk Saree</h2>
               <p>view all</p>
-              <button class="btn styled-btn-filled">Shop Now</button>
+              <a class="btn styled-btn-filled" href="{% url 'product_list' %}">Shop Now</a>
             </div>
             <div class="col text-center">
               <img
@@ -164,7 +164,7 @@
               />
               <h2 class="mt-5 text-sp-red">Banarasi Silk Saree</h2>
               <p>view all</p>
-              <button class="btn styled-btn-filled">Shop Now</button>
+              <a class="btn styled-btn-filled" href="{% url 'product_list' %}">Shop Now</a>
             </div>
             <div class="col text-center">
               <img
@@ -174,7 +174,7 @@
               />
               <h2 class="mt-5 text-sp-red">Banarasi Silk Saree</h2>
               <p>view all</p>
-              <button class="btn styled-btn-filled">Shop Now</button>
+              <a class="btn styled-btn-filled" href="{% url 'product_list' %}">Shop Now</a>
             </div>
           </div>
         </div>
