Added user and cart in index.html, fixed some bugs and did linking part

--- a/pages_static/static/pages_static/css/about.css
+++ b/pages_static/static/pages_static/css/about.css
@@ -59,6 +59,13 @@ nav div{
     font-size: 1.5rem;
 }
 
+.col-nav{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 /* Main Body Part */
 .story{
     font-family: 'Playfair Display', serif;
