--- a/pages_static/templates/base.html
+++ b/pages_static/templates/base.html
@@ -29,10 +29,25 @@
                 <h2>PANAYA</h2>
                 <p>The Heritage Collection</p>
             </div>
-            <div id='nav-right'>
+            <div id='nav-right container'>
                 <a class="nav-item" href="#">Categories</a>
-                <a class="nav-item" href="{% url 'blogs' %}">Blogs</a>
-                <a class="nav-item" href="{% url 'contact' %}">Contact Us</a>
+                <div class='col-nav' >
+                    <a href="{% if request.user.is_authenticated %}{% url 'profile' %}{% else %}{% url 'login' %}{% endif %}" class='row'>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                            <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+                        </svg>
+                    </a>
+                    <a class="nav-item col" href="{% url 'blogs' %}">Blogs</a>
+                </div>
+                <div class='col-nav'>
+                    <a class='row' href="{% if request.user.is_authenticated %}{% url 'cart' %}{% else %}{% url 'login' %}{% endif %}">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                        </svg>    
+                    </a>
+                    <a class="nav-item row" href="{% url 'contact' %}">Contact Us</a>
+                </div>
+                
             </div>
         </nav>
     </header>
@@ -93,7 +108,7 @@
                         <div>
                             <div class='row align-center footer-about'>
                                 <a class='col' href="{% url 'about' %}">Our Story</a>
-                                <a class='col' href="">Categories</a>
+                                <a class='col' href="{% url 'product_list' %}">Categories</a>
                             </div>
                             <div class="row align-center footer-about">
                                 <a class='col' href="{% url 'blogs' %}">Blog Post</a>
