--- a/pages_static/templates/pages_static/index.html
+++ b/pages_static/templates/pages_static/index.html
@@ -153,27 +153,27 @@
                 alt=""
               />
               <h2 class="mt-5 text-sp-red">Banarasi Silk Saree</h2>
-              <p>view all</p>
+              {% comment %} <p>view all</p> {% endcomment %}
               <a class="btn styled-btn-filled" href="{% url 'product_list' %}">Shop Now</a>
             </div>
             <div class="col text-center">
               <img
                 class="img-fluid"
-                src="{%static 'pages_static/images/index/Rectangle 68.png' %}"
+                src="{%static 'pages_static/images/index/Rectangle 69.png' %}"
                 alt=""
               />
-              <h2 class="mt-5 text-sp-red">Banarasi Silk Saree</h2>
-              <p>view all</p>
+              <h2 class="mt-5 text-sp-red">Jangla Saree</h2>
+              {% comment %} <p>view all</p> {% endcomment %}
               <a class="btn styled-btn-filled" href="{% url 'product_list' %}">Shop Now</a>
             </div>
             <div class="col text-center">
               <img
                 class="img-fluid"
-                src="{%static 'pages_static/images/index/Rectangle 68.png' %}"
+                src="{%static 'pages_static/images/index/Rectangle 70.png' %}"
                 alt=""
               />
-              <h2 class="mt-5 text-sp-red">Banarasi Silk Saree</h2>
-              <p>view all</p>
+              <h2 class="mt-5 text-sp-red">Jamdani Saree</h2>
+              {% comment %} <p>view all</p> {% endcomment %}
               <a class="btn styled-btn-filled" href="{% url 'product_list' %}">Shop Now</a>
             </div>
           </div>
@@ -287,16 +287,15 @@
             <div class="item">
               <div class="card">
                 <img
-                  src="{%static 'pages_static/images/index/Rectangle 79.png' %}"
+                  src="{%static 'pages_static/images/index/Rectangle 80.png' %}"
                   class="card-img-top"
                   alt="..."
                 />
                 <div class="card-body">
-                  <h5 class="card-title">Singhanias - Celebrity Blog</h5>
-                  <p>August 20, 2021</p>
+                  <h5 class="card-title">7 bridal silk sarees to give you celebrity vibes!</h5>
+                  <p>July 1, 2021</p>
                   <p class="card-text">
-                    Sailesh Singhanias is an iconic part of the tinsel world as
-                    celebrities breathe style in every l...Continue Reading
+                    The grandeur of Kanchipuram Silk Sarees are iconic! They captivate with graciousness, artistic pa...Continue Reading
                   </p>
                 </div>
               </div>
@@ -304,16 +303,15 @@
             <div class="item">
               <div class="card">
                 <img
-                  src="{%static 'pages_static/images/index/Rectangle 79.png' %}"
+                  src="{%static 'pages_static/images/index/Rectangle 81.png' %}"
                   class="card-img-top"
                   alt="..."
                 />
                 <div class="card-body">
-                  <h5 class="card-title">Singhanias - Celebrity Blog</h5>
-                  <p>August 20, 2021</p>
+                  <h5 class="card-title">Korvai Kanjivarams</h5>
+                  <p>May 21, 2021</p>
                   <p class="card-text">
-                    Sailesh Singhanias is an iconic part of the tinsel world as
-                    celebrities breathe style in every l...Continue Reading
+                    Korvai Kanjivaram Sarees in brilliant colour Combinations and designs What is a Korvai Kanjivaram...Continue Reading
                   </p>
                 </div>
               </div>
