--- a/product/templates/product/detail.html
+++ b/product/templates/product/detail.html
@@ -261,8 +261,10 @@
           Sub Total - <span id="cart-total"> Rs. 0</span>
         </p>
         <div class="mt-3 cart_hr"></div>
-        <div class="view_c mt-5"> <a class="link-light" href="/shop/cart">View Cart</a> </div>
-        <div class="checkout mt-5">Checkout</div>
+        <div class="view_c mt-5"> <a class="link-light" href="{% url 'cart' %}">View Cart</a> </div>
+        <a href="{% url 'order_start' %}">
+          <div class="checkout mt-5"> Checkout </div>
+        </a>
       </div>
     </div>
   </div>
