collections url, product styles

--- a/product/templates/product/detail.html
+++ b/product/templates/product/detail.html
@@ -51,17 +51,17 @@
 <section id="info" class="container-lg mt-5">
   <ul class="nav">
     <li class="nav-item">
-      <h5 class="nav-link tab-parent active" onclick="changeTab(event)" data-target="description" href="#">
+      <h5 class="tab-parent active" onclick="changeTab(event)" data-target="description" href="#">
         Description
       </h5>
     </li>
     <li class="nav-item">
-      <h5 class="nav-link tab-parent" onclick="changeTab(event)" data-target="reviews" href="#">
+      <h5 class="tab-parent" onclick="changeTab(event)" data-target="reviews" href="#">
         Reviews
       </h5>
     </li>
     <li class="nav-item">
-      <h5 class="nav-link tab-parent" onclick="changeTab(event)" data-target="qa" href="#">
+      <h5 class="tab-parent" onclick="changeTab(event)" data-target="qa" href="#">
         Question and Answer
       </h5>
     </li>
