--- a/product/static/products/css/product.scss
+++ b/product/static/products/css/product.scss
@@ -7,9 +7,12 @@ body {
   cursor: pointer;
 }
 
-#info .nav .nav-item .active {
+#info .nav .nav-item {
   color: #8d0020;
-  border-bottom: 2px solid #8d0020;
+  margin: 0 1rem;
+  .active {
+    border-bottom: 2px solid #8d0020;
+  }
 }
 
 #pop {
