--- a/orders/templates/payment/order_details.html
+++ b/orders/templates/payment/order_details.html
@@ -1,96 +1,112 @@
-{% extends 'base.html' %} 
-{% load static %} 
+{% extends 'base.html' %}
+{% load static %}
 {% block title %}
-    Payment Gateway
-{% endblock title %} 
+Payment Gateway
+{% endblock title %}
 {% block css %}
-    <link rel="stylesheet" href="{% static 'payment/css/gateway.css' %}">
-{% endblock css %} 
+<link rel="stylesheet" href="{% static 'payment/css/gateway.css' %}">
+{% endblock css %}
 {% block body %}
-    <div class="prod_sec_header">
-        <div class="head_top"></div>
-        <div class="header">Customert Details, Order Summery and Payment Getway</div>
-        <div class="head_bottom"></div>
-    </div>
-    <div class="container mt-5">
-        <img class="edit" src="/assets/img/edit.svg" alt="">
-        <div class="main">1. LOGIN <img class="check" src="/assets/img/check.svg" alt=""></div>
-        <div class="details pb-5">
-            <div><span class="ans ms-3">{{order.user.get_full_name}}</span><span class="ms-3">{{order.user.email}}</span></div>
+<div class="prod_sec_header">
+    <div class="head_top"></div>
+    <div class="header">Customert Details, Order Summery and Payment Getway</div>
+    <div class="head_bottom"></div>
+</div>
+<div class="container mt-5">
+    <img class="edit" src="/assets/img/edit.svg" alt="">
+    <div class="main">1. LOGIN <img class="check" src="/assets/img/check.svg" alt=""></div>
+    <div class="details pb-5">
+        <div><span class="ans ms-3">{{order.user.get_full_name}}</span><span class="ms-3">{{order.user.email}}</span>
         </div>
     </div>
-    <div class="container mt-5">
-        <img class="edit" src="/assets/img/edit.svg" alt="">
-        <div class="main">2. DELIVERY  ADDRESS <img class="check" src="/assets/img/check.svg" alt=""></div>
-        <div class="details pb-5">
-            <div class="addr_all" id="addr_{{order.address.id}}">
-                <div class="row">
-                    <div class="col-12">
-                        <label for="inputFname" class="form-label">Full Name</label>
-                        <input disabled type="text" class="form-control" value="{{order.address.fname}}" id="inputFname" placeholder="Apartment, studio, or floor">
-                    </div>
-                    <div class="col-12">
-                        <label for="inputAddress" class="form-label">Address</label>
-                        <input disabled type="text" class="form-control" value="{{order.address.address}}" id="inputAddress" placeholder="1234 Main St">
-                    </div>
+</div>
+<div class="container mt-5">
+    <img class="edit" src="/assets/img/edit.svg" alt="">
+    <div class="main">2. DELIVERY ADDRESS <img class="check" src="/assets/img/check.svg" alt=""></div>
+    <div class="details pb-5">
+        <div class="addr_all" id="addr_{{order.address.id}}">
+            <div class="row">
+                <div class="col-12">
+                    <label for="inputFname" class="form-label">Full Name</label>
+                    <input disabled type="text" class="form-control" value="{{order.address.fname}}" id="inputFname"
+                        placeholder="Apartment, studio, or floor">
                 </div>
-                <div class="row">
-                    <div class="col-auto">
-                        <label for="inputCity" class="form-label">City</label>
-                        <input disabled type="text" class="form-control" value="{{order.address.city}}" id="inputCity">
-                    </div>
-                    <div class="col-auto">
-                        <label for="inputZip" class="form-label">Postal Code</label>
-                        <input disabled type="text" class="form-control" value="{{order.address.postal_code}}" id="inputZip">
-                    </div>
+                <div class="col-12">
+                    <label for="inputAddress" class="form-label">Address</label>
+                    <input disabled type="text" class="form-control" value="{{order.address.address}}" id="inputAddress"
+                        placeholder="1234 Main St">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-auto">
+                    <label for="inputCity" class="form-label">City</label>
+                    <input disabled type="text" class="form-control" value="{{order.address.city}}" id="inputCity">
+                </div>
+                <div class="col-auto">
+                    <label for="inputZip" class="form-label">Postal Code</label>
+                    <input disabled type="text" class="form-control" value="{{order.address.postal_code}}"
+                        id="inputZip">
                 </div>
             </div>
         </div>
     </div>
-    <div class="container mt-5">
-        <div class="main">3. ORDER DETAILS </div>
-        <div class="details pb-5 text-center">
-            {% for item in order.items.all %}
-                <div class="row text-start mt-2">
-                    <div class="col-2">
-                        <img src="{{item.product.images.all.0}}" class="img-fluid" alt="">
-                    </div>
-                    <div class="col-4 offset-1">
-                        <div class="ans"><p class="fs-2">{{ item.product.name }}</p></div>
-                        <div><p class="fs-5">Qty-{{ item.quantity }} X Rs. {{item.price}}</p> </div>
-                        <div class="ans"><p class="fs-5">Price-{{ item.sub_total }}</p></div>
-                    </div>
-                    <div class="col-4">
-                        <div> <p class="fw-bold">Delivery by Sun Jul  12</p> </div>
-                    </div>
+</div>
+<div class="container mt-5">
+    <div class="main">3. ORDER DETAILS </div>
+    <div class="details pb-5 text-center">
+        {% for item in order.items.all %}
+        <div class="row text-start mt-2">
+            <div class="col-2">
+                <img src="{{item.product.images.all.0}}" class="img-fluid" alt="">
+            </div>
+            <div class="col-4 offset-1">
+                <div class="ans">
+                    <p class="fs-2">{{ item.product.name }}</p>
                 </div>
+                <div>
+                    <p class="fs-5">Qty-{{ item.quantity }} X Rs. {{item.price}}</p>
+                </div>
+                <div class="ans">
+                    <p class="fs-5">Price-{{ item.sub_total }}</p>
+                </div>
+            </div>
+            <div class="col-4">
+                <div>
+                    <p class="fw-bold">Delivery by Sun Jul 12</p>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+<div class="container mt-5 mb-5">
+    <div class="main">4. PAYMENT DETAILS </div>
+    <div class="p-4">
+        {% if order.paid %}
+        <h3>already paid</h3>
+        <h4 class="mt-2">Transactions :</h4>
+        <div class="row">
+            {% for transaction in transactions.all %}
+            <div class="col">{{transaction}}</div>
+            <div class="col">{{transaction.timestamp|time}}</div>
             {% endfor %}
         </div>
-    </div>
-    <div class="container mt-5 mb-5">
-        <div class="main">4. PAYMENT DETAILS </div>
-        <div class="p-4">
-        {% if order.paid %}
-            <h3>already paid</h3>
-            <h4 class="mt-2">Transactions :</h4>
-            <div class="row">
-                {% for transaction in transactions.all %}
-                    <div class="col">{{transaction}}</div>
-                    <div class="col">{{transaction.timestamp|time}}</div>
-                {% endfor %}
-            </div>
         {% else %}
-            <button data-addrId={{order.address.id}} id="order-btn" class="mx-auto continue mt-2">Continue to Pay</button>
+        <button data-addrId={{order.address.id}} id="order-btn" class="mx-auto continue mt-2">Continue to Pay</button>
         {% endif %}
-        </div>
     </div>
+</div>
 {% endblock body%}
 {% block js %}
 {% if order.paid %}
 {% else %}
-    <script> let createOrderUrl = "{% url 'order_create' %}";  </script>
-    <script> let redirectUrl = "{% url 'rp_callback' %}"; </script>
-    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-    <script src="{% static 'payment/js/razorpay.js' %}"></script>
+<script>
+    let createOrderUrl = "{% url 'create_order' %}";
+</script>
+<script>
+    let redirectUrl = "{% url 'rp_callback' %}";
+</script>
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+<script src="{% static 'payment/js/razorpay.js' %}"></script>
 {% endif %}
 {% endblock js %}
