--- a/product/templates/product/detail.html
+++ b/product/templates/product/detail.html
@@ -1,20 +1,13 @@
 {% extends 'base.html' %} {% load static %} {% block title %} {{ product.name }}
 {% endblock title %} {% block css %}
 <link rel="stylesheet" href="{% static 'products/css/product.css' %}" />
-{% endblock css %} 
+{% endblock css %}
 {% block body %}
 
 <section id="heading" class="section-heading">
-  <img
-    src="{% static 'pages_static/images/section-heading-decor.png' %}"
-    alt=""
-  />
+  <img src="{% static 'pages_static/images/section-heading-decor.png' %}" alt="" />
   <h1>Product Section</h1>
-  <img
-    class="flip-horizontal"
-    src="{% static 'pages_static/images/section-heading-decor.png' %}"
-    alt=""
-  />
+  <img class="flip-horizontal" src="{% static 'pages_static/images/section-heading-decor.png' %}" alt="" />
 </section>
 
 <section id="product" class="container-lg mt-5">
@@ -24,23 +17,13 @@
         <div class="row g-1">
           <div class="col-2" style="overflow-y: auto" id="select-img-container">
             {% for img in product.images.all %}
-            <img
-              src="{{img}}"
-              style="cursor: pointer"
-              class="img-fluid mb-1"
-              alt=""
-              onclick="setActiveProductImg(event)"
-            />
+            <img src="{{img}}" style="cursor: pointer" class="img-fluid mb-1" alt=""
+              onclick="setActiveProductImg(event)" />
             {% endfor %}
           </div>
           <div class="col-10">
-            <img
-              style="max-height: 400px; cursor: pointer"
-              src="{{product.images.all.0}}"
-              alt="product"
-              class="img-fluid"
-              id="active-product-img"
-            />
+            <img style="max-height: 400px; cursor: pointer" src="{{product.images.all.0}}" alt="product"
+              class="img-fluid" id="active-product-img" />
           </div>
         </div>
       </div>
@@ -49,38 +32,20 @@
       <h1 class="text-sp-red">{{ product.name }}</h1>
       <h3 class="text-secondary">Rs. {{product.price}}</h3>
       <div class="number-input">
-        <button
-          onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
-        ></button>
-        <input
-          class="quantity"
-          id="quantity"
-          min="0"
-          name="quantity"
-          value="1"
-          type="number"
-        />
-        <button
-          onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
-          class="plus"
-        ></button>
+        <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"></button>
+        <input class="quantity" id="quantity" min="0" name="quantity" value="1" type="number" />
+        <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus"></button>
       </div>
       <p class="fw-light mt-1">Only {{product.stocks}} piece in stock</p>
       <p>{{product.description}}</p>
-      <button
-        class="btn st-btn-outline-red my-2"
-        onClick="addToCart(event)"
-        data-bs-toggle="modal"
-        data-bs-target="#cartModal"
-        data-id="{{product.id}}"
-        data-name="{{product.name}}"
-        data-price="{{product.price}}"
-        dat-stock="{{product.stock}}"
-        data-img="{{product.images.all.0}}"
-      >
+      <button class="btn st-btn-outline-red my-2" onClick="addToCart(event)" data-bs-toggle="modal"
+        data-bs-target="#cartModal" data-id="{{product.id}}" data-name="{{product.name}}" data-price="{{product.price}}"
+        dat-stock="{{product.stock}}" data-img="{{product.images.all.0}}">
         Add to your trunk
       </button>
-      <button class="btn styled-btn-filled my-2">Buy Now</button>
+      <a href="{% url 'buy_now' product.id %}">
+        <button class="btn styled-btn-filled my-2">Buy Now</button>
+      </a>
     </div>
   </div>
 </section>
@@ -88,32 +53,17 @@
 <section id="info" class="container-lg mt-5">
   <ul class="nav">
     <li class="nav-item">
-      <h5
-        class="nav-link tab-parent active"
-        onclick="changeTab(event)"
-        data-target="description"
-        href="#"
-      >
+      <h5 class="nav-link tab-parent active" onclick="changeTab(event)" data-target="description" href="#">
         Description
       </h5>
     </li>
     <li class="nav-item">
-      <h5
-        class="nav-link tab-parent"
-        onclick="changeTab(event)"
-        data-target="reviews"
-        href="#"
-      >
+      <h5 class="nav-link tab-parent" onclick="changeTab(event)" data-target="reviews" href="#">
         Reviews
       </h5>
     </li>
     <li class="nav-item">
-      <h5
-        class="nav-link tab-parent"
-        onclick="changeTab(event)"
-        data-target="qa"
-        href="#"
-      >
+      <h5 class="nav-link tab-parent" onclick="changeTab(event)" data-target="qa" href="#">
         Question and Answer
       </h5>
     </li>
@@ -145,15 +95,9 @@
                     master-builder of human happines.
                   </p>
                   <footer class="card-footer d-flex justify-content-between">
-                    <div
-                      class="d-flex align-items-center justify-content-center"
-                    >
+                    <div class="d-flex align-items-center justify-content-center">
                       <div class="me-2">
-                        <img
-                          class="usr-img"
-                          src="/assets/img/shop/Author avatar.png"
-                          alt=""
-                        />
+                        <img class="usr-img" src="/assets/img/shop/Author avatar.png" alt="" />
                       </div>
                       <p>
                         John Lucas<span class="fw-light"> • 5 minutes ago</span>
@@ -187,20 +131,13 @@
                   </div>
                   <p class="card-text fw-light">{{review.body}}</p>
                   <div class="card-footer d-flex justify-content-between">
-                    <div
-                      class="d-flex align-items-center justify-content-center"
-                    >
+                    <div class="d-flex align-items-center justify-content-center">
                       <div class="me-2">
-                        <img
-                          class="usr-img"
-                          src="/assets/img/shop/Author avatar.png"
-                          alt=""
-                        />
+                        <img class="usr-img" src="/assets/img/shop/Author avatar.png" alt="" />
                       </div>
                       <p>
                         {{review.user}}<span class="fw-light">
-                          • {{review.timestamp|timesince}}</span
-                        >
+                          • {{review.timestamp|timesince}}</span>
                       </p>
                     </div>
 
@@ -238,13 +175,7 @@
   </div>
 </section>
 <!-- POP UP -->
-<div
-  class="modal fade"
-  id="cartModal"
-  tabindex="-1"
-  aria-labelledby="cartModalLabel"
-  aria-hidden="true"
->
+<div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="cartModalLabel" aria-hidden="true">
   <div class="modal-dialog" style="margin: 1rem 1rem 1rem auto">
     <div class="modal-content">
       <div id="pop">
@@ -262,7 +193,7 @@
         </p>
         <div class="mt-3 cart_hr"></div>
         <div class="view_c mt-5"> <a class="link-light" href="{% url 'cart' %}">View Cart</a> </div>
-        <a href="{% url 'order_start' %}">
+        <a href="{% url 'create_order' %}">
           <div class="checkout mt-5"> Checkout </div>
         </a>
       </div>
@@ -271,32 +202,19 @@
 </div>
 {% endblock %} {% block js %}
 <!-- jquery -->
-<script
-  src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
   integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-  crossorigin="anonymous"
-  referrerpolicy="no-referrer"
-></script>
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <!-- owl carousel -->
-<script
-  src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
   integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-  crossorigin="anonymous"
-  referrerpolicy="no-referrer"
-></script>
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
   integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-  crossorigin="anonymous"
-  referrerpolicy="no-referrer"
-/><link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
   integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
-  crossorigin="anonymous"
-  referrerpolicy="no-referrer"
-/>
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
 <script>
   $(".owl-fw-carousel").owlCarousel({
     loop: true,
@@ -332,10 +250,10 @@
     cart = new Cart();
   });
 </script>
-{% endblock js %} 
+{% endblock js %}
 
 
-{% comment %} 
+{% comment %}
 <div class="product-detail">
   <h1>{{ product.name }}</h1>
   <h2>
